--- a/module-3/02_CSS_Selectors/lecture-student/trello/index.html
+++ b/module-3/02_CSS_Selectors/lecture-student/trello/index.html
@@ -1,99 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Trello Board</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway"
-      rel="stylesheet"
-    />        
-  </head>
 
-  <body>
-    <header>
-      <h1>My Task List</h1>
-      <p>Tech Elevator</p>
-      <p>Team Visible</p>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Trello Board</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+  <style>
+    /*
+    main div {
+      border: 2px solid pink;
+    }
+    
 
-    <main id="trello-board">
-      <div class="trello-list">
-        <h2>General</h2>
-        <ol class="cards">
-          <li class="card">
-            <div class="labels">
-              <span class="label general"></span>
-            </div>
-            INSTRUCTIONS
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label pathway"></span>
-            </div>
-            PATHWAY
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-            </div>
-            INDIVIDUAL
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label pair"></span>
-            </div>
-            PAIR
-          </li>
-        </ol>
-        <a href="#">Add another card</a>
-      </div>
+    .card .label {
+      border: 2px solid green;
+    }
 
-      <!-- <div class="trello-list">
-        <h2>Module 1 Week 1</h2>
-        <ol class="cards">
-          <li class="card">
-            <div class="labels">
-              <span class="label pathway"></span>
-            </div>
-            PATHWAY: INTRODUCTION
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-            </div>
-            Introduction to Tools
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-            </div>
-            Variables and Datatypes
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-            </div>
-            Expressions, Statements, Blocks, and Logical Branching
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-            </div>
-            Loops and Arrays
-          </li>
-          <li class="card">
-            <div class="labels">
-              <span class="label individual"></span>
-              <span class="label pair"></span>
-            </div>
-            Command-Line Programs
-          </li>
-        </ol>
-        <a href="#">Add another card</a>
-      </div>
+    #trello-board {
+      background-color: yellow;
+    }
+    
+    li {
+      border: 1px solid blue;
+    }
 
+    /*
+    li:hover {
+      color: white;
+      background-color: darkgray;
+    }
+
+    li:active {
+      color: black;
+      background-color: pink;
+
+      }
+    }
+  
+    header {
+      box-sizing: border-box;
+      width: 500px;
+      padding: 20px;
+      border: 10px solid black;
+    }
+    */
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>My Task List</h1>
+    <p>Tech Elevator</p>
+    <p>Team Visible</p>
+  </header>
+
+  <main id="trello-board">
+    <div class="trello-list">
+      <h2>General</h2>
+      <ol class="cards">
+        <li class="card">
+          <div class="labels">
+            <span class="label general"></span>
+          </div>
+          INSTRUCTIONS
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label pathway"></span>
+          </div>
+          PATHWAY
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+          </div>
+          INDIVIDUAL
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label pair"></span>
+          </div>
+          PAIR
+        </li>
+      </ol>
+      <a href="#">Add another card</a>
+    </div>
+
+    <div class="trello-list">
+      <h2>Module 1 Week 1</h2>
+      <ol class="cards">
+        <li class="card">
+          <div class="labels">
+            <span class="label pathway"></span>
+          </div>
+          PATHWAY: INTRODUCTION
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+          </div>
+          Introduction to Tools
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+          </div>
+          Variables and Datatypes
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+          </div>
+          Expressions, Statements, Blocks, and Logical Branching
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+          </div>
+          Loops and Arrays
+        </li>
+        <li class="card">
+          <div class="labels">
+            <span class="label individual"></span>
+            <span class="label pair"></span>
+          </div>
+          Command-Line Programs
+        </li>
+      </ol>
+      <a href="#">Add another card</a>
+    </div>
+    <!--
       <div class="trello-list">
         <h2>Module 1 Week 2</h2>
         <ol class="cards">
@@ -147,6 +186,7 @@
         </ol>
         <a href="#">Add another card</a>
       </div> -->
-    </main>
-  </body>
+  </main>
+</body>
+
 </html>
