--- a/module-3/04_Flexbox/lecture-student/index.html
+++ b/module-3/04_Flexbox/lecture-student/index.html
@@ -72,6 +72,26 @@
                         deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
                 </div>
             </article>
+            <article>
+                <div><i class="fas fa-pizza-slice fa-7x"> </i></div>
+                <div>
+                    <header>Pizza By the Slice</header>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
+                        provident vero, blanditiis doloremque maiores neque suscipit velit saepe consequatur error odit
+                        amet corporis facere dolorem illo? Excepturi optio earum suscipit. Natus repellendus expedita
+                        deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
+                </div>
+            </article>
+            <article>
+                <div><i class="fas fa-ice-cream fa-7x"> </i></div>
+                <div>
+                    <header>Custard - Yum!</header>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
+                        provident vero, blanditiis doloremque maiores neque suscipit velit saepe consequatur error odit
+                        amet corporis facere dolorem illo? Excepturi optio earum suscipit. Natus repellendus expedita
+                        deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
+                </div>
+            </article>
         </section>
     </section>
 </body>
