--- a/module-3/04_Flexbox/lecture-student/reservations.html
+++ b/module-3/04_Flexbox/lecture-student/reservations.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservations</title>
-	<!--
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	-->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
+
 <body>
     <header>
         <h1>Bits & Bytes</h1>
@@ -17,12 +20,13 @@
     <main>
         <h2>Reservation Form</h2>
 
-        <div>Visit the <a href="https://getbootstrap.com/docs/5.1/forms/overview/" target="_blank">Bootstrap Forms page</a> for details on how to style forms and their controls</div>
+        <div>Visit the <a href="https://getbootstrap.com/docs/5.1/forms/overview/" target="_blank">Bootstrap Forms
+                page</a> for details on how to style forms and their controls</div>
 
         <form method="POST" action="https://example.com/api/reservation">
-            <div>
-                <label for="reservationName">Name:</label>
-                <input id="reservationName" name="reservationName" type="text"/>
+            <div class="nb-3">
+                <label for="reservationName" class="form-label">Name:</label>
+                <input id="reservationName" class="form-control" name="reservationName" type="text" />
             </div>
             <div>
                 <label for="numberOfGuests">Number of guests:</label>
@@ -46,4 +50,5 @@
         </form>
     </main>
 </body>
+
 </html>
