--- a/module-3/05_Review/lecture-final/grid.html
+++ b/module-3/05_Review/lecture-final/grid.html
@@ -28,11 +28,14 @@
             border: 5px solid pink;
             grid-template-areas:
                 'header header header header header header'
-                'menu main main main right right'
-                'menu footer footer footer footer footer';
-            grid-gap: 10px;
-            background-color: #2196F3;
+                'menu   menu   main   main   right  right'
+                'menu   menu   footer footer footer footer';
+            grid-template-rows: 200px 300px 100px;
+            grid-gap: 50px;
+            background-color: red;
             padding: 10px;
+            justify-content: stretch;
+            font-family: 'Courier New', Courier, monospace;
         }
 
         .grid-container>div {
@@ -42,6 +45,26 @@
             padding: 20px 0;
             font-size: 30px;
         }
+
+        .flex-container {
+            display: flex;
+            border: 2px solid pink;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .flex-container>div {
+            border: 2px solid green;
+            /* flex-grow: 1; */
+            text-align: center;
+            flex: 
+        }
+
+        /*
+        .flexitem3 {
+            order: -1;
+        }
+        */
     </style>
 </head>
 
@@ -52,11 +75,21 @@
     <p>This grid layout contains six columns and three rows:</p>
 
     <div class="grid-container">
+        <div class="item5">Footer</div>
         <div class="item1">Header</div>
         <div class="item2">Menu</div>
         <div class="item3">Main</div>
         <div class="item4">Right</div>
-        <div class="item5">Footer</div>
+    </div>
+
+    <h2>Flexbox</h2>
+
+    <div class="flex-container">
+        <div class="flexitem1">Header</div>
+        <div class="flexitem2">Menu</div>
+        <div class="flexitem3">Main</div>
+        <div class="flexitem4">Right</div>
+        <div class="flexitem5">Footer</div>
     </div>
 
 </body>
